// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleChoice > renders default as expected 1`] = `
<div>
  <form
    class="flex flex-col gap-6"
  >
    <fieldset
      class="flex flex-col gap-2 border-0 m-0 p-0 min-w-0"
    >
      <legend
        class="sr-only"
      >
        What drove the change?
      </legend>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          disabled=""
          name="answer"
          type="radio"
          value="The community's preference for low-tech fishing traditions"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        The community's preference for low-tech fishing traditions
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          disabled=""
          name="answer"
          type="radio"
          value="Rising consumer demand for fish with more Omega-3s"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        Rising consumer demand for fish with more Omega-3s
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          disabled=""
          name="answer"
          type="radio"
          value="Environmental regulations and declining cod stocks"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        Environmental regulations and declining cod stocks
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          disabled=""
          name="answer"
          type="radio"
          value="A cultural shift toward vegetarianism in the region"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        A cultural shift toward vegetarianism in the region
      </label>
    </fieldset>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--primary bg-bluedot-normal link-on-dark !bg-bluedot-normal !whitespace-normal"
      href="/login?register=true&redirect_to=%2Ftest-path"
      tabindex="0"
    >
      Create a free account to check your answer
      <span
        class="cta-button__chevron ml-3"
      >
        <svg
          class="cta-button__chevron-icon size-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
      </span>
    </a>
  </form>
</div>
`;

exports[`MultipleChoice > renders logged in as expected 1`] = `
<div>
  <form
    class="flex flex-col gap-6"
  >
    <fieldset
      class="flex flex-col gap-2 border-0 m-0 p-0 min-w-0"
    >
      <legend
        class="sr-only"
      >
        What drove the change?
      </legend>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          name="answer"
          type="radio"
          value="The community's preference for low-tech fishing traditions"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        The community's preference for low-tech fishing traditions
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          name="answer"
          type="radio"
          value="Rising consumer demand for fish with more Omega-3s"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        Rising consumer demand for fish with more Omega-3s
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          name="answer"
          type="radio"
          value="Environmental regulations and declining cod stocks"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        Environmental regulations and declining cod stocks
      </label>
      <label
        class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-primary has-disabled:text-disabled items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-default bg-canvas hover:not-has-checked:not-has-disabled:bg-tint has-checked:not-has-disabled:border-accent has-checked:not-has-disabled:bg-accent-subtle has-disabled:bg-surface-disabled"
      >
        <input
          class="peer sr-only"
          name="answer"
          type="radio"
          value="A cultural shift toward vegetarianism in the region"
        />
        <span
          aria-hidden="true"
          class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-border-control peer-checked:border-accent peer-checked:text-accent peer-disabled:not-peer-checked:border-default peer-disabled:not-peer-checked:bg-surface-disabled peer-disabled:peer-checked:opacity-40 peer-aria-invalid:not-peer-disabled:border-error-fg peer-aria-invalid:not-peer-disabled:text-error-fg"
        >
          <span
            class="size-2.5 rounded-full bg-current"
          />
        </span>
        A cultural shift toward vegetarianism in the region
      </label>
    </fieldset>
    <button
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--primary bg-bluedot-normal link-on-dark !bg-bluedot-normal"
      disabled=""
      type="submit"
    >
      Select an option
    </button>
  </form>
</div>
`;

exports[`MultipleChoice > updates styles for correct option 1`] = `
<label
  class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-success-fg items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-success-border bg-success-bg"
>
  <input
    class="peer sr-only"
    disabled=""
    name="answer"
    type="radio"
    value="The community's preference for low-tech fishing traditions"
  />
  <span
    aria-hidden="true"
    class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-success-fg peer-checked:text-success-fg"
  >
    <span
      class="size-2.5 rounded-full bg-current"
    />
  </span>
  The community's preference for low-tech fishing traditions
</label>
`;

exports[`MultipleChoice > updates styles for incorrect option 1`] = `
<label
  class="group flex gap-2 cursor-pointer text-size-sm leading-normal has-disabled:cursor-not-allowed text-error-fg items-center rounded-surface border-2 p-4 transition-colors motion-reduce:transition-none has-focus-visible:outline-2 has-focus-visible:outline-focus border-error-border bg-error-bg"
>
  <input
    class="peer sr-only"
    name="answer"
    type="radio"
    value="Rising consumer demand for fish with more Omega-3s"
  />
  <span
    aria-hidden="true"
    class="flex size-6 shrink-0 items-center justify-center bg-raised text-transparent transition-colors motion-reduce:transition-none rounded-full border-2 border-error-fg peer-checked:text-error-fg"
  >
    <span
      class="size-2.5 rounded-full bg-current"
    />
  </span>
  Rising consumer demand for fish with more Omega-3s
</label>
`;

exports[`MultipleChoice > updates styles for incorrect option 2`] = `
<button
  class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-size-sm bd-md:text-size-xs px-4 py-3 rounded-sm font-semibold cta-button--black bg-bluedot-darker link-on-dark hover:bg-bluedot-darkest"
  type="button"
>
  <span
    class="flex items-center gap-2"
  >
    Try again
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z"
      />
    </svg>
  </span>
</button>
`;

exports[`MultipleChoice > updates styles for selected option 1`] = `
<input
  class="peer sr-only"
  name="answer"
  type="radio"
  value="The community's preference for low-tech fishing traditions"
/>
`;
